noinst_LIBRARIES = libticpp.a
AM_CPPFLAGS=-I$(top_srcdir)/ticpp $(TICPP_CPPFLAGS) -DTIXML_USE_TICPP -DTIXML_USE_STL

libticpp_a_SOURCES =ticpp.cpp tinystr.cpp tinyxml.cpp tinyxmlerror.cpp tinyxmlparser.cpp ticpp.h ticpprc.h tinystr.h tinyxml.h
EXTRA_DIST =build_instructions.txt changes.txt dox premake.lua readme.txt tutorial_gettingStarted.txt tutorial_ticpp.txt xmltest.cpp